--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
     <p>몽문서 · 꿈을 기록하는 은밀한 의식</p>
   </footer>
 
-  <script defer type="text/javascript" src="/main.js"></script>
+  <script defer type="module" src="/main.js"></script>
 </body>
 </html>
