Add per-entry history delete

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
       </div>
       <div class="panel history-panel reveal">
         <div class="panel-header">
-          <h2>나의 해석 기록</h2>
-          <p>내가 받은 해몽을 모아두고 다시 확인할 수 있어요.</p>
+          <h2>내가 만든 꿈의 페이지</h2>
+          <p>내가 만든 꿈 기록을 모아두고 다시 확인할 수 있어요.</p>
         </div>
         <div id="historyList" class="history-list">
           <p class="muted">아직 저장된 해석이 없습니다.</p>
