--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>몽문서: 잠의 의식을 해독하다</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <meta name="google-adsense-account" content="ca-pub-8165197041036892">
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,500;9..144,700&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8165197041036892" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="orb orb-a" aria-hidden="true"></div>
