Add quality content and policies

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <a href="#interpret">해독</a>
       <a href="#symbols">상징서</a>
       <a href="#ritual">의식</a>
+      <a href="#guide">가이드</a>
+      <a href="#glossary">키워드</a>
+      <a href="#cases">사례</a>
+      <a href="#policy">정책</a>
     </nav>
   </header>
 
@@ -146,6 +150,118 @@
             <p class="ritual-value">숨을 고르고 장면을 다시 떠올리기</p>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section id="guide" class="guide reveal">
+      <div class="section-title">
+        <h2>꿈 해석 가이드</h2>
+        <p>꿈은 감정과 기억이 섞인 심리적 언어입니다. 다음 기준을 참고해 자신만의 해석을 더 깊게 만들어 보세요.</p>
+      </div>
+      <div class="guide-grid">
+        <article>
+          <h3>1. 감정의 출발점</h3>
+          <p>꿈에서 가장 강했던 감정을 먼저 기록합니다. 감정은 해석의 방향을 정하는 핵심 기준입니다.</p>
+        </article>
+        <article>
+          <h3>2. 상징의 반복</h3>
+          <p>같은 인물이나 장소가 반복된다면 현재 삶에서 반복되는 주제일 가능성이 큽니다. 상징을 한 문장으로 요약해 보세요.</p>
+        </article>
+        <article>
+          <h3>3. 행동의 흐름</h3>
+          <p>도망침, 추락, 싸움, 상승 등 행동은 현재의 선택과 결정을 반영합니다. 행동의 방향이 현실의 방향성과 닮아 있는지 점검합니다.</p>
+        </article>
+        <article>
+          <h3>4. 관계의 거리감</h3>
+          <p>꿈속 인물과의 거리감은 현실의 관계 감정을 비춥니다. 가까운 인물일수록 기대와 부담이 섞여 있을 수 있습니다.</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="glossary" class="glossary reveal">
+      <div class="section-title">
+        <h2>키워드 해석 사전</h2>
+        <p>자주 등장하는 키워드를 빠르게 찾아보고, 해석의 단서로 활용해 보세요.</p>
+      </div>
+      <div class="glossary-grid">
+        <article>
+          <h3>감정·심리</h3>
+          <p>불안: 미래 걱정 · 공포: 회피 중인 문제 · 분노: 억눌린 감정 · 슬픔: 관계 균열 · 혼란: 선택 장애 · 죄책감: 후회 · 외로움: 정서적 단절 · 안정감: 만족</p>
+        </article>
+        <article>
+          <h3>행동</h3>
+          <p>도망침: 책임 회피 · 숨음: 자기 방어 · 싸움: 갈등 표출 · 추락: 실패 두려움 · 상승: 성취 욕구 · 반복 행동: 루틴 피로 · 멈춤: 번아웃</p>
+        </article>
+        <article>
+          <h3>인물</h3>
+          <p>가족: 정체성 · 연인: 애착 · 친구: 비교 · 낯선 사람: 억압된 자아 · 유명인: 이상적 자아 · 과거 인물: 미해결 감정 · 어린아이: 내면의 상처</p>
+        </article>
+        <article>
+          <h3>장소</h3>
+          <p>집: 자아 · 학교: 평가 · 회사: 책임 · 병원: 회복 · 길: 방향 · 숲: 무의식 · 바다: 감정 깊이 · 산: 목표 · 지하: 억눌림 · 옥상: 한계</p>
+        </article>
+        <article>
+          <h3>자연·환경</h3>
+          <p>물: 감정 · 불: 분노/열정 · 비: 정화/우울 · 눈: 감정 억제 · 바람: 변화 · 어둠: 불안 · 빛: 깨달음 · 지진: 구조적 변화</p>
+        </article>
+        <article>
+          <h3>시간·상태</h3>
+          <p>늦음: 압박 · 반복되는 날: 루틴 피로 · 과거로 이동: 미련 · 미래 장면: 기대/불안 · 멈춘 시간: 정체 · 빠른 전개: 감정 과부하</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="cases" class="cases reveal">
+      <div class="section-title">
+        <h2>해몽 사례 노트</h2>
+        <p>실제 해석 흐름을 따라가며 해몽의 구조를 익혀보세요.</p>
+      </div>
+      <div class="case-grid">
+        <article>
+          <h3>쫓기는 꿈</h3>
+          <p>업무 마감이 겹친 시기, 꿈에서 계속 도망친다면 책임 회피와 압박이 동시에 쌓였다는 신호일 수 있습니다. 감정은 불안, 행동은 도망침으로 연결됩니다.</p>
+        </article>
+        <article>
+          <h3>시험을 보는 꿈</h3>
+          <p>중요한 발표를 앞둔 시기라면 평가에 대한 부담이 시험으로 나타날 수 있습니다. 시간 부족은 준비감 결여를 뜻합니다.</p>
+        </article>
+        <article>
+          <h3>이가 빠지는 꿈</h3>
+          <p>말실수나 이미지 손상에 대한 걱정이 커질 때 나타납니다. 표현의 압박과 자존감이 동시에 작동하는 패턴입니다.</p>
+        </article>
+        <article>
+          <h3>물에 빠지는 꿈</h3>
+          <p>감정에 압도될 때 자주 등장합니다. 최근 관계 갈등이나 감정 폭발이 있었다면 그 여파가 꿈에 반영될 수 있습니다.</p>
+        </article>
+      </div>
+    </section>
+
+    <section id="policy" class="policy reveal">
+      <div class="section-title">
+        <h2>사이트 정보 및 정책</h2>
+        <p>콘텐츠의 투명성과 신뢰성을 위해 아래 정보를 제공합니다.</p>
+      </div>
+      <div class="policy-grid">
+        <article>
+          <h3>사이트 소개</h3>
+          <p>몽문서는 꿈을 기록하고 스스로의 감정을 정리할 수 있도록 돕는 심리적 기록 공간입니다. 제공되는 해몽은 참고용이며 의료·상담을 대체하지 않습니다.</p>
+        </article>
+        <article>
+          <h3>광고 및 수익 고지</h3>
+          <p>사이트에는 광고가 표시될 수 있습니다. 광고는 사이트 운영을 위한 최소한의 수익을 제공합니다.</p>
+        </article>
+        <article>
+          <h3>이용약관</h3>
+          <p>본 사이트의 콘텐츠는 개인적 활용을 위한 정보 제공을 목적으로 하며, 무단 복제 및 상업적 재배포를 금지합니다.</p>
+        </article>
+        <article>
+          <h3>개인정보처리방침</h3>
+          <p>꿈 기록은 사용자의 브라우저 로컬 저장소에 보관됩니다. 외부 서버에 개인정보를 저장하지 않습니다.</p>
+        </article>
+        <article>
+          <h3>문의</h3>
+          <p>문의: ajejdps12@gmail.com</p>
+        </article>
       </div>
     </section>
 
