Refine animal interpretations and keyword insights

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
           <button class="filter-button" type="button" data-filter="감정/상태" aria-pressed="false">감정/상태</button>
           <button class="filter-button" type="button" data-filter="관계/인물" aria-pressed="false">관계/인물</button>
           <button class="filter-button" type="button" data-filter="자연/환경" aria-pressed="false">자연/환경</button>
+          <button class="filter-button" type="button" data-filter="동물" aria-pressed="false">동물</button>
           <button class="filter-button" type="button" data-filter="신체/감각" aria-pressed="false">신체/감각</button>
           <button class="filter-button" type="button" data-filter="장소/공간" aria-pressed="false">장소/공간</button>
           <button class="filter-button" type="button" data-filter="사물/기호" aria-pressed="false">사물/기호</button>
@@ -411,7 +412,119 @@
           <h3>산</h3>
           <p>높은 목표, 도전, 자아 성장과 연결될 수 있습니다.</p>
         </article>
-        </div>
+        <article data-category="동물,감정/상태">
+          <h3>많은 동물</h3>
+          <p>긍정 감정은 활력·생명력 상승, 부정 감정은 스트레스와 감정 과부하를 뜻합니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>동물의 새끼</h3>
+          <p>새로운 시작과 변화의 조짐입니다. 연애는 새 인연, 일은 새 역할·기회로 이어질 수 있습니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>동물 일반</h3>
+          <p>기회 도래와 능력 발휘의 시기입니다. 소원·목표에 접근 중일 수 있습니다.</p>
+        </article>
+        <article data-category="동물,행동/상황">
+          <h3>동물에 물림</h3>
+          <p>변화에 대한 결의의 신호입니다. “이대로는 안 된다”는 자각이 떠오를 수 있습니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>동물을 기름</h3>
+          <p>평온한 일상과 안정된 마음을 뜻합니다. 기르지 않는 동물일수록 심리적 여유를 상징합니다.</p>
+        </article>
+        <article data-category="동물,행동/상황">
+          <h3>동물을 먹음</h3>
+          <p>잠재 능력을 흡수하는 흐름입니다. 기회를 잡을 준비가 되어 있다는 뜻입니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>개</h3>
+          <p>운의 상승을 상징합니다. 흰·갈색 개는 기회, 검은 개는 피로 누적을 뜻합니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>고양이</h3>
+          <p>인간관계, 특히 여성 관계를 뜻합니다. 질투·경쟁자가 나타날 수 있으며 검은 고양이는 행운입니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>뱀</h3>
+          <p>행복과 재물운의 상승입니다. 연애·일이 원만해지고 뜻밖의 수입도 가능합니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>곰</h3>
+          <p>모성과 보호의 상징입니다. 계획이 안정적으로 진행되고 평가가 좋아질 수 있습니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>토끼</h3>
+          <p>행운의 상징입니다. 적극적으로 행동할수록 기회가 확대됩니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>햄스터</h3>
+          <p>소소하지만 확실한 행복의 흐름입니다. 연애 성과, 일·수입 기회가 있을 수 있습니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>새</h3>
+          <p>차분하고 긍정적인 상태를 뜻합니다. 도전하기 좋은 시기입니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>참새</h3>
+          <p>작은 행운이 찾아와 마음이 따뜻해지는 사건이 생길 수 있습니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>원숭이</h3>
+          <p>거짓말, 말장난, 분쟁 등 대인관계 트러블을 암시합니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>쥐</h3>
+          <p>흰 쥐는 연애·금전운 상승, 검은 쥐는 적·배신·라이벌을 뜻합니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>늑대</h3>
+          <p>위험 경고의 신호입니다. 범죄, 위험한 제안, 집단에 주의하세요.</p>
+        </article>
+        <article data-category="동물">
+          <h3>개구리</h3>
+          <p>노력의 결실과 성과를 암시합니다. 큰 개구리는 금전운 상승을 뜻합니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>여우</h3>
+          <p>속임이나 인간관계 트러블의 징조입니다. 주변 사람을 신중히 살피세요.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>고릴라</h3>
+          <p>긍정 감정은 관계 확대, 부정 감정은 대인 스트레스를 뜻합니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>부엉이</h3>
+          <p>지식욕 상승과 자기 통제력의 신호입니다. 냉정함과 확신이 강해집니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>사자</h3>
+          <p>긍정은 경쟁 승리·출세, 부정은 오만과 대인 문제를 암시합니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>악어</h3>
+          <p>사건·사고 경고입니다. 많을수록 고민이 증가하며 피로·긴장 해소가 필요합니다.</p>
+        </article>
+        <article data-category="동물,감정/상태">
+          <h3>호랑이</h3>
+          <p>에너지와 도전 정신의 상승을 뜻합니다. 감정 과열에 주의하세요.</p>
+        </article>
+        <article data-category="동물">
+          <h3>말</h3>
+          <p>정신·체력 에너지가 상승하는 흐름을 뜻합니다.</p>
+        </article>
+        <article data-category="동물">
+          <h3>돼지</h3>
+          <p>재물운 상승의 상징입니다. 돼지가 너무 많으면 정신적 스트레스가 쌓였다는 뜻입니다.</p>
+        </article>
+        <article data-category="동물,관계/인물">
+          <h3>잉꼬</h3>
+          <p>인간관계 스트레스를 상징합니다.</p>
+        </article>
+        <article data-category="동물,초월/미지">
+          <h3>실재하지 않는 동물</h3>
+          <p>잠재 재능과 새로운 도전의 신호입니다. 변화에 대한 기대 또는 두려움이 드러날 수 있습니다.</p>
+        </article>
+      </div>
       </div>
       <button class="modal-backdrop" type="button" aria-label="모달 닫기"></button>
     </div>
