Add book intro page-turn animation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8165197041036892" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="book-intro" aria-hidden="true">
+    <div class="book">
+      <span class="book-cover"></span>
+      <span class="book-page page-1"></span>
+      <span class="book-page page-2"></span>
+      <span class="book-page page-3"></span>
+    </div>
+  </div>
   <div class="orb orb-a" aria-hidden="true"></div>
   <div class="orb orb-b" aria-hidden="true"></div>
 
