Add full-screen book intro with start button

--- a/index.html
+++ b/index.html
@@ -12,12 +12,27 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8165197041036892" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="book-intro" aria-hidden="true">
-    <div class="book">
-      <span class="book-cover"></span>
-      <span class="book-page page-1"></span>
-      <span class="book-page page-2"></span>
-      <span class="book-page page-3"></span>
+  <div class="book-intro" aria-hidden="false">
+    <div class="book-frame" role="presentation">
+      <div class="book-title">
+        <p class="eyebrow">몽문서</p>
+        <h1>몽문서: 잠의 의식을 해독하다</h1>
+      </div>
+      <div class="book-spread">
+        <div class="book-page left">
+          <div class="page-content">
+            <p class="page-label">꿈의 서고</p>
+            <p class="page-line">꿈의 장면을 기록하고, 상징과 감정을 엮어 해독하세요.</p>
+            <p class="page-line">의식처럼 천천히, 그러나 분명하게.</p>
+          </div>
+        </div>
+        <div class="book-page right">
+          <div class="page-content align-end">
+            <p class="page-label">시작하기</p>
+            <button class="btn primary start-button" id="startBook" type="button">책 넘기기</button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="orb orb-a" aria-hidden="true"></div>
