--- a/index.html
+++ b/index.html
@@ -13,25 +13,13 @@
 </head>
 <body>
   <div class="book-intro" aria-hidden="false">
-    <div class="book-frame" role="presentation">
-      <div class="book-title">
+    <div class="book-cover-frame" role="presentation">
+      <div class="cover-title">
         <p class="eyebrow">몽문서</p>
         <h1>몽문서: 잠의 의식을 해독하다</h1>
       </div>
-      <div class="book-spread">
-        <div class="book-page left">
-          <div class="page-content">
-            <p class="page-label">꿈의 서고</p>
-            <p class="page-line">꿈의 장면을 기록하고, 상징과 감정을 엮어 해독하세요.</p>
-            <p class="page-line">의식처럼 천천히, 그러나 분명하게.</p>
-          </div>
-        </div>
-        <div class="book-page right">
-          <div class="page-content align-end">
-            <p class="page-label">시작하기</p>
-            <button class="btn primary start-button" id="startBook" type="button">책 넘기기</button>
-          </div>
-        </div>
+      <div class="cover-bottom">
+        <button class="btn primary start-button" id="startBook" type="button">책 열기</button>
       </div>
     </div>
   </div>
