Refine intro cover with opening animation

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <div class="book-intro" aria-hidden="false">
     <div class="book-cover-frame" role="presentation">
+      <span class="spine" aria-hidden="true"></span>
       <div class="cover-title">
         <p class="eyebrow">몽문서</p>
         <h1>몽문서: 잠의 의식을 해독하다</h1>
