--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   <div class="book-intro" aria-hidden="false">
     <div class="book-cover-frame" role="presentation">
       <span class="spine" aria-hidden="true"></span>
+      <div class="page-stack" aria-hidden="true">
+        <span class="page-sheet page-a"></span>
+        <span class="page-sheet page-b"></span>
+        <span class="page-sheet page-c"></span>
+      </div>
       <div class="cover-title">
         <p class="eyebrow">몽문서</p>
         <h1>몽문서: 잠의 의식을 해독하다</h1>
