--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <div class="book-intro" aria-hidden="false">
     <div class="book-cover-frame" role="presentation">
       <span class="spine" aria-hidden="true"></span>
+      <span class="cover-front" aria-hidden="true"></span>
       <div class="page-stack" aria-hidden="true">
         <span class="page-sheet page-a"></span>
         <span class="page-sheet page-b"></span>
