Age cover style and show title banner

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       <a href="#policy">정책</a>
     </nav>
   </header>
+  <div class="title-banner" aria-hidden="true">
+    <p class="eyebrow">몽문서</p>
+    <h1>몽문서: 잠의 의식을 해독하다</h1>
+  </div>
 
   <main>
     <section class="hero">
