--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </div>
     <nav class="site-nav">
       <a href="#interpret">해독</a>
+      <a href="#fortune">운세</a>
       <a href="#symbols">상징서</a>
       <a href="#ritual">의식</a>
       <a href="#guide">가이드</a>
@@ -101,6 +102,35 @@
         </div>
         <div class="history-actions">
           <button class="btn ghost" type="button" id="clearHistory">책 지우기</button>
+        </div>
+      </div>
+    </section>
+
+    <section id="fortune" class="fortune reveal">
+      <div class="section-title">
+        <h2>동물 운세</h2>
+        <p>오늘 마음에 떠오르는 동물을 골라보세요. 꿈의 기호를 빌려 운의 흐름을 짚어드립니다.</p>
+      </div>
+      <div class="fortune-card">
+        <div class="fortune-controls">
+          <p class="fortune-label">동물 선택</p>
+          <div class="animal-chips" role="listbox" aria-label="동물 선택">
+            <button class="chip-button" type="button" data-animal="용" role="option" aria-selected="false">용</button>
+            <button class="chip-button" type="button" data-animal="호랑이" role="option" aria-selected="false">호랑이</button>
+            <button class="chip-button" type="button" data-animal="여우" role="option" aria-selected="false">여우</button>
+            <button class="chip-button" type="button" data-animal="부엉이" role="option" aria-selected="false">부엉이</button>
+            <button class="chip-button" type="button" data-animal="말" role="option" aria-selected="false">말</button>
+            <button class="chip-button" type="button" data-animal="돼지" role="option" aria-selected="false">돼지</button>
+            <button class="chip-button" type="button" data-animal="토끼" role="option" aria-selected="false">토끼</button>
+            <button class="chip-button" type="button" data-animal="고양이" role="option" aria-selected="false">고양이</button>
+            <button class="chip-button" type="button" data-animal="늑대" role="option" aria-selected="false">늑대</button>
+          </div>
+        </div>
+        <div class="fortune-actions">
+          <button class="btn primary" type="button" id="drawFortune">운세 열기</button>
+        </div>
+        <div id="fortuneResult" class="fortune-result">
+          <p class="muted">동물을 고르면 오늘의 운세가 열립니다.</p>
         </div>
       </div>
     </section>
