Show zodiac fortune on chip click

--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
 
     <section id="fortune" class="fortune reveal">
       <div class="section-title">
-        <h2>동물 운세</h2>
-        <p>오늘 마음에 떠오르는 동물을 골라보세요. 꿈의 기호를 빌려 운의 흐름을 짚어드립니다.</p>
+        <h2>오늘의 12간지 운세</h2>
+        <p>자신의 띠를 골라보세요. 12간지의 기운을 빌려 오늘의 흐름을 전합니다.</p>
       </div>
       <div class="fortune-card">
         <div class="fortune-controls">
-          <p class="fortune-label">동물 선택</p>
-          <div class="animal-chips" role="listbox" aria-label="동물 선택">
-            <button class="chip-button" type="button" data-animal="용" role="option" aria-selected="false">용</button>
+          <p class="fortune-label">띠 선택</p>
+          <div class="animal-chips" role="listbox" aria-label="띠 선택">
+            <button class="chip-button" type="button" data-animal="쥐" role="option" aria-selected="false">쥐</button>
+            <button class="chip-button" type="button" data-animal="소" role="option" aria-selected="false">소</button>
             <button class="chip-button" type="button" data-animal="호랑이" role="option" aria-selected="false">호랑이</button>
-            <button class="chip-button" type="button" data-animal="여우" role="option" aria-selected="false">여우</button>
-            <button class="chip-button" type="button" data-animal="부엉이" role="option" aria-selected="false">부엉이</button>
-            <button class="chip-button" type="button" data-animal="말" role="option" aria-selected="false">말</button>
-            <button class="chip-button" type="button" data-animal="돼지" role="option" aria-selected="false">돼지</button>
             <button class="chip-button" type="button" data-animal="토끼" role="option" aria-selected="false">토끼</button>
-            <button class="chip-button" type="button" data-animal="고양이" role="option" aria-selected="false">고양이</button>
-            <button class="chip-button" type="button" data-animal="늑대" role="option" aria-selected="false">늑대</button>
+            <button class="chip-button" type="button" data-animal="용" role="option" aria-selected="false">용</button>
+            <button class="chip-button" type="button" data-animal="뱀" role="option" aria-selected="false">뱀</button>
+            <button class="chip-button" type="button" data-animal="말" role="option" aria-selected="false">말</button>
+            <button class="chip-button" type="button" data-animal="양" role="option" aria-selected="false">양</button>
+            <button class="chip-button" type="button" data-animal="원숭이" role="option" aria-selected="false">원숭이</button>
+            <button class="chip-button" type="button" data-animal="닭" role="option" aria-selected="false">닭</button>
+            <button class="chip-button" type="button" data-animal="개" role="option" aria-selected="false">개</button>
+            <button class="chip-button" type="button" data-animal="돼지" role="option" aria-selected="false">돼지</button>
           </div>
         </div>
-        <div class="fortune-actions">
-          <button class="btn primary" type="button" id="drawFortune">운세 열기</button>
-        </div>
         <div id="fortuneResult" class="fortune-result">
-          <p class="muted">동물을 고르면 오늘의 운세가 열립니다.</p>
+          <p class="muted">띠를 고르면 오늘의 운세가 열립니다.</p>
         </div>
       </div>
     </section>
